Big content update, rules, spirit etc

--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -17,8 +17,8 @@ $grid-gutter-width: 20px;
 
 $white: #ffffff;
 $black: #000000;
-$primary: #480a43;
-$secondary: #30052d;
+$primary: #6f0166;
+$secondary: #3c97c9;
 
 // Links
 $link-color: $primary;
