--- a/assets/scss/bootstrap/_variables.scss
+++ b/assets/scss/bootstrap/_variables.scss
@@ -37,7 +37,7 @@ $grays: map-merge((
 $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
-$dpurple: #33082f !default;
+$dpurple: #6f0166 !default;
 $dback:   #0a030c !default;
 $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
@@ -66,7 +66,7 @@ $colors: map-merge((
   "gray-dark":  $gray-800
 ), $colors);
 
-$primary:       $dpurple !default;
+$primary:       $purple !default;
 $secondary:     $cyan !default;
 $success:       $green !default;
 $info:          $cyan !default;
