chant image and hero image attempt

--- a/assets/scss/components/_hero-image.scss
+++ b/assets/scss/components/_hero-image.scss
@@ -4,7 +4,7 @@
   // background-position: top center;
   background-blend-mode: overlay;
   background-color: $primary;
-  height: 400px;
+  height: 50%;
   position: relative;
   padding-top: 60px;
   .container {
