--- a/assets/scss/components/_main-menu.scss
+++ b/assets/scss/components/_main-menu.scss
@@ -13,7 +13,7 @@
       > a {
         padding: 10px 14px 10px 14px;
         display: inline-block;
-        font-weight: regular;
+        font-weight: 900;
         text-transform: uppercase;
         text-decoration: none;
         color: $white;
