--- a/assets/scss/pages/services/_service-summary.scss
+++ b/assets/scss/pages/services/_service-summary.scss
@@ -16,7 +16,7 @@
       font-size: 1.5rem;
     }
     p {
-      color: #666;
+      color: rgb(255, 255, 255);
       font-size: 0.9rem;
       width: 90%;
     }
