--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,11 +10,11 @@
               {{ end }}
           </ul>
           {{ end }}
-          <ul class="footer-menu">
+          <!--<ul class="footer-menu">
             <li><a href="{{ .Site.BaseURL }}">Home</a></li>
             <li><a href="{{ .Site.BaseURL }}contact">Contact</a></li>
             <li class="copyright">© {{ now.Format "2006" }} {{.Site.Title}}</li>
-          </ul>
+          </ul>-->
         </div>
       </div>
     </div>
