--- a/assets/scss/pages/services/_page-services-single.scss
+++ b/assets/scss/pages/services/_page-services-single.scss
@@ -1,12 +1,14 @@
 .page-services-single {
   .content {
     > p {
+      color: rgb(255, 255, 255);
       &:first-of-type {
         font-size: 1.2rem;
         line-height: 1.5;
         margin-bottom: 40px;
         font-weight: 300;
         @include media-breakpoint-up(md) {
+          color: rgb(255, 255, 255);
           font-size: 1.4rem;
           line-height: 1.4;
           margin-bottom: 40px;
