--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -52,6 +52,7 @@
 @import 'components/main-menu';
 @import 'components/main-menu-mobile';
 @import 'components/social';
+@import 'components/maker';
 @import 'components/hamburger';
 @import 'components/buttons';
 @import 'components/title';
