--- a/layouts/ultimate/single.html
+++ b/layouts/ultimate/single.html
@@ -13,7 +13,11 @@
     </div>
   </div>
 </div>
+<a href="/ultimate">Back to Ultimate</a>
 {{ end }}
+
+
+
 
 {{ define "footer_js" }}
 {{ $library := resources.Get "js/libs/library.js" }}
