--- a/assets/scss/bootstrap/_variables.scss
+++ b/assets/scss/bootstrap/_variables.scss
@@ -38,7 +38,8 @@ $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $dpurple: #6f0166 !default;
-$dback:   #0a030c !default;
+$prime:   #cb2d6f !default;
+$dback:   #0f292f !default;
 $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
@@ -46,6 +47,9 @@ $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
+$sec:     #14A098 !default;
+$mar:     #501f3a !default;
+$bei:     #cccccc !default;
 
 $colors: () !default;
 $colors: map-merge((
@@ -53,6 +57,10 @@ $colors: map-merge((
   "indigo":     $indigo,
   "purple":     $purple,
   "dpurple":    $dpurple,
+  "prime":      $prime,
+  "sec":        $sec,
+  "mar":        $mar,
+  "bei":        $bei,
   "dback":      $dback,
   "pink":       $pink,
   "red":        $red,
@@ -66,14 +74,14 @@ $colors: map-merge((
   "gray-dark":  $gray-800
 ), $colors);
 
-$primary:       $purple !default;
-$secondary:     $cyan !default;
+$primary:       $prime !default;
+$secondary:     $sec !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $gray-100 !default;
-$dark:          $gray-800 !default;
+$light:         $bei !default;
+$dark:          $dback !default;
 
 $theme-colors: () !default;
 $theme-colors: map-merge((
@@ -154,7 +162,7 @@ $body-color:                $white !default;
 $link-color:                theme-color("primary") !default;
 $link-decoration:           none !default;
 $link-hover-color:          darken($link-color, 15%) !default;
-$link-hover-decoration:     underline !default;
+$link-hover-decoration:     bold !default;
 
 // Paragraphs
 //
@@ -312,8 +320,8 @@ $table-active-bg:             $table-hover-bg !default;
 $table-border-width:          $border-width !default;
 $table-border-color:          $gray-300 !default;
 
-$table-head-bg:               $gray-200 !default;
-$table-head-color:            $gray-700 !default;
+$table-head-bg:               $white !default;
+$table-head-color:            $white !default;
 
 $table-dark-bg:               $gray-900 !default;
 $table-dark-accent-bg:        rgba($white, .05) !default;
