--- a/assets/scss/pages/work/_work-summary.scss
+++ b/assets/scss/pages/work/_work-summary.scss
@@ -19,7 +19,7 @@
       font-size: 1.5rem;
     }
     p {
-      color: #666;
+      color: rgb(255, 255, 255);
       font-size: 0.9rem;
     }
   }
