--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -17,6 +17,13 @@
             <li><a href="{{ .Site.BaseURL }}contact">Contact</a></li>
             <li class="copyright">© {{ now.Format "2006" }} {{.Site.Title}}</li>
           </ul>
+          {{ if .Site.Data.maker }}
+          <ul class="maker">
+              {{ range .Site.Data.maker }}
+                  <li><a href="{{ .link }}" target="blank"><img width="auto" height="20" src="{{ .image | relURL }}" title="{{ .name }}" alt="{{ .name }}" class="filter-white"/></a></li>
+              {{ end }}
+          </ul>
+          {{ end }}
         </div>
       </div>
     </div>
