--- a/assets/scss/bootstrap/_variables.scss
+++ b/assets/scss/bootstrap/_variables.scss
@@ -161,7 +161,7 @@ $body-color:                $white !default;
 
 $link-color:                theme-color("primary") !default;
 $link-decoration:           none !default;
-$link-hover-color:          darken($link-color, 15%) !default;
+$link-hover-color:          lighten($link-color, 10%) !default;
 $link-hover-decoration:     bold !default;
 
 // Paragraphs
