--- a/assets/scss/pages/services/_page-services-single.scss
+++ b/assets/scss/pages/services/_page-services-single.scss
@@ -1,5 +1,9 @@
 .page-services-single {
   .content {
+    a:link, a:visited {color: $secondary;
+      text-decoration: none;
+      font-weight: bold;}
+    a:hover, a:active {color: lighten($secondary, 10%)}
     > p {
       color: rgb(255, 255, 255);
       &:first-of-type {
