about flex container

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -63,6 +63,7 @@
 @import 'components/feature';
 @import 'components/hero-image';
 @import 'components/bg';
+@import 'components/about_container';
 
 // Pages
 @import 'pages/services/page-services-list';
