--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,11 +26,21 @@
 <div id="home" class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('{{ .Params.background | relURL }}');">
   <div class="container pt-17 pb-17">
     <div class="row">
-      <div class="col-12 col-md-6 offset-md-6">
+      <div class="about_container{{ if eq .Params.align "right" }}_reverse{{ end }}">
+        <div>
         <h2 class="text-primary text-capitalize">{{ .Title }}</h2>
-        <p>{{ .Content }}</p>
-        <a class="button" href="{{ .Params.buttonLink | relURL }}">{{ .Params.button }}</a>
+        {{ .Content }}
+        {{ if .Params.button }}
+          <a class="button" href="{{ .Params.buttonLink | relURL }}">{{ .Params.button }}</a>
+        {{ end }}
       </div>
+      <div>
+        {{ if .Params.image }}
+          <img src={{ .Params.image }} id="responsive-image"> 
+        {{ end }}
+      </div>
+      </div>
+      
     </div>
   </div>
 </div>
