--- a/layouts/contact/contact.html
+++ b/layouts/contact/contact.html
@@ -36,8 +36,9 @@
         <li style="white-space: pre-wrap;"><strong>Address: </strong><br>{{ .Site.Data.contact.address }}</li>
         {{ end }}
       </ul>
-      
-          
+      <br>
+      The map below highlights our training locations and other important locations for the club. Click the button in the upper left corner of the map to reveal the tab of location names.<br><br>
+      <iframe src="https://www.google.ie/maps/d/u/5/embed?mid=1ImNHeGY41zCjjV05QFNzn24wjBZ9e_M&ehbc=2E312F" width="100%" height="500"></iframe>    
        
       <!--{{ if .Site.Data.contact.hours }}
       <h4 class="mt-4">Business Hours</h4>
@@ -55,4 +56,5 @@
     </div>
   </div>
 </div>
+
 {{ end }}
